kubernetes/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes
spec:
  selector:
    app: notes
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
