kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes
  labels:
    route53: notes
spec:
  rules:
    - host: "notes.zgamelogic.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notes
                port:
                  number: 3000
  tls:
    - hosts:
        - "notes.zgamelogic.com"
      secretName: ingress-tls
